--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,11 @@ python/*.png
 *.l#*
 pickplazstm/Debug/*
 pickplazstm/Release/*
+pickplazstm/Debug/*
+pickplazstm/Rel.settings/*
+pickplazfeederstm/Debug/*
+pickplazfeederstm/Release/*
+pickplazfeederstm/Debug/*
+pickplazfeederstm/Rel.settings/*
 python/user/*
 backup/*
